# bureau-economic-analysis

./: .gitignore  README.md  catalog.json  dev.py  main.py  pyproject.toml
.github/workflows/: run.yml
assets/data/: data.py
assets/datasets/: datasets.py
assets/gdp_by_industry/: gdp_by_industry.py
assets/ita/: ita.py
assets/nipa/: nipa.py  nipa_comprehensive.py
assets/parameters/: parameters.py
assets/regional/: regional.py
data/analysis/: nipa.meta.json  nipa_tables.meta.json  nipa_tables.parquet
data/subsets/bea_auto_output_b_chained_dollars_annual/: part-00000-9fc93689-103c-4dfe-9751-37cc75e76b4f-c000.snappy.parquet
data/subsets/bea_auto_output_b_chained_dollars_quarterly/: part-00000-92cfa8cf-c1bc-4ba2-8c8b-aa30a7666f04-c000.snappy.parquet
data/subsets/bea_auto_output_b_level_annual/: part-00000-b2af66a5-553e-4a8a-92bf-7c401f6abd1a-c000.snappy.parquet
src/: bea_client.py  main.py
src/connector_utils/: __init__.py  bea_client.py  publish_utils.py  state_utils.py  transform_utils.py
src/ingest/: __init__.py  nipa_data.py  nipa_tables.py
src/nodes/: __init__.py  fixed_assets_data.py  fixed_assets_tables.py  fixed_assets_transform.py  gdp_industry_data.py  gdp_industry_tables.py  gdp_industry_transform.py  iip_data.py  iip_tables.py  iip_transform.py  ita_data.py  ita_tables.py  ita_transform.py  ni_underlying_data.py  ni_underlying_tables.py  ni_underlying_transform.py  nipa_data.py  nipa_tables.py  nipa_transform.py  regional_data.py  regional_tables.py  regional_transform.py
src/utils/: bea_client.py
(+338 files in other folders)
