[project]
name = "bureau-economic-analysis"
version = "0.1.0"
description = "Bureau of Economic Analysis data connector"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [ "boto3>=1.35.0", "duckdb>=1.0.0", "httpx>=0.27.0", "pyarrow>=17.0.0", "pyiceberg", "ratelimit>=2.2.1", "requests>=2.31.0", "tenacity>=8.5.0",]
