[project]
name = "bureau-economic-analysis"
version = "0.1.0"
description = "BEA (Bureau of Economic Analysis) connector for US economic data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "psutil>=5.9.0",
    "httpx>=0.24.0",
    "pyarrow>=12.0.0",
    "tenacity>=8.0.0",
    "ratelimit>=2.2.1",
    "duckdb>=0.9.0",
    "boto3>=1.26.0",
    "requests>=2.28.0",
    "deltalake>=0.17.0",
    "sqlalchemy>=2.0.43",

    "duckdb",
]

[tool.uv]
dev-dependencies = [
    "psutil>=5.9.0",
    "pytest>=7.0.0",
    "ipython>=8.0.0",
    "duckdb",
]
